# esercizi_terza

./: README.md
Arduino/Led_LCD/: Led_LCD.ino
C++/: main.cpp
C++/File1_Start/Es1/: main.cpp
C++/File1_Start/Es10/: CMakeLists.txt  main.cpp
C++/File1_Start/Es11/: CMakeLists.txt  main.cpp
C++/File1_Start/Es12/: main.cpp
C++/File1_Start/Es13/: CMakeLists.txt  main.cpp
C++/File1_Start/Es14/: main.cpp
C++/File1_Start/Es15/: CMakeLists.txt  main.cpp
C++/File1_Start/Es16/: main.cpp
C++/File1_Start/Es16_giusto/: CMakeLists.txt  main.cpp
C++/File1_Start/Es17/: CMakeLists.txt  main.cpp
C++/File1_Start/Es18/: CMakeLists.txt  main.cpp
C++/Raylib/Pixel_casuali_con_nome/: CMakeLists.txt  main.cpp
C++/Start/Triangle/: main.cpp  (+1 more)
Flowgorithm/Esercizi_PDF/: Es.13 pag.32.fprg  Es.14 pag.32.fprg  Es.15 pag.32.fprg  Es.16 pag.32.fprg  Es.17 pag.32.fprg  Es.18 pag.32.fprg  Es.19 pag.32.fprg  Es.20 pag.32.fprg  Es.21 pag.32.fprg  Es.22 pag.32.fprg  Es.23 pag.32.fprg  Es.28 pag.33.fprg  Es.29 pag.33.fprg  Es.31 pag.33.fprg  Es.32 pag.33.fprg  Es.8 pag.31.fprg  Es.9 pag.31.fprg
Flowgorithm/Iterazione/: Es.1.fprg  Es.10.fprg  Es.11.fprg  Es.12.fprg  Es.13.fprg  Es.14.fprg  Es.15.fprg  Es.16.fprg  Es.17.fprg  Es.18.fprg  Es.2.fprg  Es.3.fprg  Es.4.fprg  Es.5.fprg  Es.6.fprg  Es.7.fprg  Es.8.fprg  Es.9.fprg
Flowgorithm/Sequenza/: Area_Cerchio.fprg  Area_Trapezio.fprg  Area_Triangolo.fprg  Es.10.fprg  Es.11.fprg  Es.12.fprg  Es.2.fprg  Es.3.fprg  Es.4.fprg  Es.5.fprg  Es.6.fprg  Es.7.fprg  Es.8.fprg  Es.9.fprg  Prezzi.fprg  Quadrati_perfetti.fprg
HTML/: New_HTML.txt
(+165 files in other folders)
